<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simtofly_mavros_real</name>
  <version>1.0.0</version>
  <description>MAVROS configuration package for real hardware deployment (Cube Orange, Pixhawk). Tested on Raspberry Pi with ROS2 Humble.</description>
  <maintainer email="sidharthmohannair@gmail.com">Sidharth Mohan Nair</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/sidharthmohannair/ros2-ardupilot-sitl-hardware</url>
  <url type="repository">https://github.com/sidharthmohannair/ros2-ardupilot-sitl-hardware</url>
  <url type="bugtracker">https://github.com/sidharthmohannair/ros2-ardupilot-sitl-hardware/issues</url>

  <author email="sidharthmohannair@gmail.com">Sidharth Mohan Nair</author>

  <!-- Runtime dependencies -->
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
